// Copyright 2023 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package rpcexplorer;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// S1 service does something.
//
// And one more line.
service S1 {
  // Method does blah.  And something extra.
  rpc Method(M) returns (M2);
}

service S2 {
}

message M {
  // i is integer
  int32 i = 1;
  repeated int32 ri = 2;
  string s = 3;
  E e = 4;
  M2 m = 10;
  // mr is repeated message
  // second line.
  repeated M2 mr = 11;
}

message M2 {
  int32 i = 1;
  string s = 2;
}

message MapContainer {
  map<int32, M> im = 1;
  map<int32, int32> ii = 2;
}

enum E {
  // V0 comment.
  V0 = 0;
  // V1 comment.
  V1 = 1;
}

message MultiWord {
  string foo_bar = 1;
}

message Autocomplete {
  int32 single_int = 1;
  E single_enum = 2;
  MultiWord single_msg = 3;
  repeated int32 repeated_int = 4;
  repeated E repeated_enum = 5;
  repeated MultiWord repeated_msg = 6;
  map<int32, int32> map_int = 7;
  map<int32, E> map_enum = 8;
  map<int32, MultiWord> map_msg = 9;
  google.protobuf.Any any_msg = 10;
  google.protobuf.Duration dur_msg = 11;
  google.protobuf.Timestamp ts_msg = 12;
  google.protobuf.FieldMask fm_msg = 13;
  google.protobuf.Struct struct_msg = 14;
  google.protobuf.StringValue str_msg = 15;
  google.protobuf.Int64Value int_msg = 16;
}
